deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:flask-application
  labels:
    app: flask-application
    component: flask-application
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask-application
